--- a/project1.lpi
+++ b/project1.lpi
@@ -47,6 +47,11 @@
         <ResourceBaseClass Value="Form"/>
         <UnitName Value="Unit1"/>
       </Unit>
+      <Unit>
+        <Filename Value="xselection.pas"/>
+        <IsPartOfProject Value="True"/>
+        <UnitName Value="xSelection"/>
+      </Unit>
     </Units>
   </ProjectOptions>
   <CompilerOptions>
